<?php

class Caller
{

    private Standard $standard;

    public function __construct($standard)
    {
        $this->standard = $standard;
    }

    public function cancelCall(): void
    {
        // to complete
    }
}