@startuml shopping
skinparam classAttributeIconSize 0


class Standard {
    - delay: int
    + correspondent: Correspondent 
    - price: double
    - balance: double
    - duration: int
    
    + Standard()
    + consumeBalance(): double
    + startDelay(): void
    + hangUp(): int
    + insertMoney(double): void
    + composeNumber(string): void
    + startCall(): void
    + endCall(): void
}

class Caller {
    public standard: Standard

    + Caller()
    + cancelCall(): void
    + entryPubliPhone(Standard): void
}

class Correspondent {
    - phoneNumber: String 

    + Correspondent(Standard)
    + pickUp(): void
}

Caller *--  "_caller" Standard
Correspondent *-- "_correspondent" Standard
Caller <|-- Correspondent

@enduml
